# llvm-data-interop

./: .gitignore  README.md  Setup.hs  configure  configure.ac  llvm-data-interop.buildinfo  llvm-data-interop.buildinfo.in  llvm-data-interop.cabal
src/Data/LLVM/: Attributes.chs  Dwarf.hs  Identifiers.hs  Interop.chs  Parse.hs  ParseBitcode.hs
src/Data/LLVM/Internal/: Interop.chs
src/LLVM/: Parse.hs
src/LLVM/Internal/: Interop.chs  TypeUnification.hs
src/c++/: llvm-base-enums.h  marshal.cpp  marshal.h
