name: llvm-data-interop
version: 0.1.0
synopsis: A low-level data interoperability binding for LLVM
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Data
build-type: Configure
cabal-version: >=1.10

-- A longer description of the package.
-- Description:

extra-source-files: configure,
                    llvm.buildinfo.in,
                    llvm.buildinfo.windows.in,
                    src/c++/marshal.h


library
  default-language: Haskell2010
  build-depends: base > 3 && < 5, array, bytestring,
                 dwarf, deepseq, mtl > 2, hashable >= 1.1.2.0
  exposed-modules: Data.LLVM.Interop,
                   Data.LLVM.Dwarf,
                   Data.LLVM.Identifiers,
                   Data.LLVM.Attributes
  build-tools: c2hs
  c-sources: src/c++/marshal.cpp
  ghc-options: -Wall
  ghc-prof-options: -auto-all
  include-dirs: src
  hs-source-dirs: src

