name: llvm-data-interop
version: 0.1.0
synopsis: A low-level data interoperability binding for LLVM
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Data
build-type: Custom
cabal-version: >=1.10

-- A longer description of the package.
-- Description:

extra-source-files: configure,
                    llvm-data-interop.buildinfo.in,
                    src/c++/marshal.h

library
  default-language: Haskell2010
  build-depends: base > 3 && < 5, array, bytestring, data-default >= 0.3, containers,
                 dwarf, deepseq, mtl > 2, hashable >= 1.1.2.0, llvm-base-types
  other-modules: Data.LLVM.Internal.Interop
  exposed-modules: Data.LLVM.Parse
  build-tools: c2hs
  c-sources: src/c++/marshal.cpp
  extra-libraries: stdc++
  ghc-options: -Wall
  ghc-prof-options: -auto-all
  include-dirs: src
  hs-source-dirs: src
  cc-options: -fvisibility-inlines-hidden -fvisibility=hidden
